Fix the unwanted submit_disabled button spinner on mobile. Show the "confirm your email" screen in black.

--- a/resources/static/dialog/css/m.css
+++ b/resources/static/dialog/css/m.css
@@ -79,6 +79,26 @@
   }
 
   /**
+   * Override all the disabled styles on the buttons. The mobile button
+   * has no spinner.
+   */
+  button[disabled], .submit_disabled button, .submit_disabled .button,
+  .submit_disabled button:hover, .submit_disabled .button:hover,
+  .submit_disabled button:focus, .submit_disabled .button:focus,
+  .submit_disabled button:active, .submit_disabled .button:active,
+  .submit_disabled .submit button, .submit_disabled .submit .button,
+  .submit_disabled .submit button:hover, .submit_disabled .submit .button:hover,
+  .submit_disabled .submit button:focus, .submit_disabled .submit .button:focus,
+  .submit_disabled .submit button:active, .submit_disabled .submit .button:active {
+    color: #c7c7c7;
+    cursor: default;
+    background: #e8e8e8;
+    border: 1px solid #a1c3cc;
+    box-shadow: none;
+  }
+
+
+  /**
    * On mobile, the anchors are meant to look like buttons. Give them an
    * overhaul.
    */
